--- a/TODO.cfg
+++ b/TODO.cfg
@@ -10,8 +10,9 @@ item4="	-Здоровье"
 
 [В процессе]
 
-item0="	-Перемещение (нужна возможность ходить по диагонали"
+__none__="null"
 
 [Сделано]
 
+item0="	-Перемещение (перемещение по диагонали быстрее чем в сторону, но как-то поебать)"
 item6="	-Поиск пути ( я сделал говно. говно работвет)"
